# modefilter

./: .gitignore  Makefile  README.md  modefilter-cpu.def  modefilter-gpu.def  modefilter-k80.def  modefilter-python.def  pom.xml  pyproject.toml
cuda/: Makefile  empiricalnullfilter.cu
java/: Empirical_Null_Filter_GPU.java
java/uk/ac/warwick/sip/empiricalnullfilter/: EmpiricalNull.java  Kernel.java  MadModeNull.java  MadModeNullFilter.java  ModeFilter.java  RankFilters.java
python/modefilter/: __init__.py
src/: Empirical_Null_Filter.java  Mode_Filter.java  Mode_Filter_GPU.java
src/uk/ac/warwick/sip/empiricalnullfilter/: BenchMarker.java  Cache.java  CacheReflect.java  ConvergenceException.java  EmpiricalNullFilter.java  EmpiricalNullFilterGpu.java  InvalidValueException.java  MeanVarNullFilter.java  MedianIqrNullFilter.java  ModeFilterGpu.java
